<?xml version="1.0" encoding="utf-8"?>
    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_personaje"
        android:layout_margin="20dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="28dp"
        card_view:cardElevation="4dp"
        card_view:contentPadding="5dp"
        tools:context=".Details"
        >

        <RelativeLayout
            android:layout_width="381dp"
            android:layout_height="680dp"
            android:padding="16dp">

            <ImageView
                android:id="@+id/item_img"
                android:layout_width="165dp"
                android:layout_height="194dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="82dp"
                android:layout_marginEnd="190dp"
                android:layout_marginRight="16dp" />

            <TextView
                android:id="@+id/item_name"
                android:layout_width="350dp"
                android:layout_height="38dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="1dp"
                android:fontFamily="@font/annie_use_your_telescope"
                android:textColor="@color/text1"
                android:textSize="30dp"
                android:textStyle="bold" />







            <TextView
                android:id="@+id/text1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="-159dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="14dp"
                android:layout_toEndOf="@+id/item_img"
                android:fontFamily="@font/ubuntu_mono"
                android:text="@string/especie_e"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_especie"
                android:layout_width="150dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="-175dp"
                android:layout_marginTop="105dp"
                android:layout_marginEnd="1dp"
                android:layout_toEndOf="@+id/item_img"
                android:fontFamily="@font/ubuntu_mono"
                android:textColor="@color/text1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="-159dp"
                android:layout_marginTop="130dp"
                android:layout_marginEnd="14dp"
                android:layout_toEndOf="@+id/item_img"
                android:fontFamily="@font/ubuntu_mono"
                android:text="@string/genero_e"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_genero"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="-175dp"
                android:layout_marginTop="155dp"
                android:layout_marginEnd="1dp"
                android:textAlignment="center"
                android:layout_toEndOf="@+id/item_img"
                android:fontFamily="@font/ubuntu_mono"
                android:textColor="@color/text1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="-159dp"
                android:layout_marginTop="185dp"
                android:layout_marginEnd="14dp"
                android:layout_toEndOf="@+id/item_img"
                android:fontFamily="@font/ubuntu_mono"
                android:text="@string/house_e"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_house"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="-175dp"
                android:layout_marginTop="205dp"
                android:layout_marginEnd="1dp"
                android:textAlignment="center"
                android:layout_toEndOf="@+id/item_img"
                android:fontFamily="@font/ubuntu_mono"
                android:textColor="@color/text1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="-159dp"
                android:layout_marginTop="230dp"
                android:layout_marginEnd="14dp"
                android:layout_toEndOf="@+id/item_img"
                android:fontFamily="@font/ubuntu_mono"
                android:text="@string/patronu"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_patronus"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="-175dp"
                android:layout_marginTop="255dp"
                android:layout_marginEnd="1dp"
                android:textAlignment="center"
                android:layout_toEndOf="@+id/item_img"
                android:fontFamily="@font/ubuntu_mono"
                android:textColor="@color/text1"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="290dp"
                android:fontFamily="@font/ubuntu_mono"
                android:text="@string/wand"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="320dp"
                android:layout_marginEnd="29dp"
                android:fontFamily="@font/ubuntu_mono"
                android:text="@string/madera"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/itemMadera"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="345dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/ubuntu_mono"
                android:textColor="@color/text1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="370dp"
                android:layout_marginEnd="29dp"
                android:fontFamily="@font/ubuntu_mono"
                android:text="@string/longitud"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/itemLongitud"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="395dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/ubuntu_mono"
                android:textColor="@color/text1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="420dp"
                android:layout_marginEnd="29dp"
                android:fontFamily="@font/ubuntu_mono"
                android:text="@string/nucleo"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_nucleo"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="445dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/ubuntu_mono"
                android:textColor="@color/text1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="475dp"
                android:layout_marginEnd="29dp"
                android:fontFamily="@font/ubuntu_mono"
                android:text="@string/actor_e"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/item_actor"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/buttonBack"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="500dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="53dp"
                android:fontFamily="@font/ubuntu_mono"
                android:textColor="@color/text1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="199dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="87dp"
                android:layout_marginEnd="85dp"
                android:layout_marginBottom="14dp"
                android:backgroundTint="@color/btn_s"
                android:text="@string/back"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/conexionElement"
                style="?android:attr/progressBarStyle"
                android:layout_width="153dp"
                android:layout_height="147dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="116dp"
                android:layout_marginTop="258dp"
                android:layout_marginEnd="128dp"
                android:layout_marginBottom="291dp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
